--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="login-card rounded-2xl p-8 w-full max-w-md">
             <div class="text-center mb-8">
                 <div class="w-16 h-16 bg-white rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg border-2 border-gray-200">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjFoZoF_UQFDZ0WIcogBokuYyvqzzKr_TMibzKjBQyPDZSXK3kc5zPUyyIqJ4_WunT8HKXEtSIE8-g_GdKl50_bbERjV-TTMl_7B7CpQJ87E-tR3XoZs9kSFwsotGIaKTQL2xOFsp9bPJOyUUOcipV9oN45FYpst4LTwEe3f84jhyKTMVulcUvNi-kRRam2/s320-rw/GMS-Composite-Knitting-Ind.-Ltd.png" alt="GMS Logo" class="w-12 h-12 object-contain rounded-full" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="https://logic.gmsbd.com/platform/file_upload/company_details_1_5639_0.jpg" alt="GMS Logo" class="w-12 h-12 object-contain rounded-full" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <svg class="w-8 h-8 text-gray-600 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="display: none;">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
                     </svg>
@@ -347,7 +347,7 @@
                     <div class="flex items-center gap-3">
                         <!-- Company Logo/Icon -->
                         <div class="w-12 h-12 rounded-lg flex items-center justify-center shadow-md ring-1 ring-green-200/50 bg-white">
-                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjFoZoF_UQFDZ0WIcogBokuYyvqzzKr_TMibzKjBQyPDZSXK3kc5zPUyyIqJ4_WunT8HKXEtSIE8-g_GdKl50_bbERjV-TTMl_7B7CpQJ87E-tR3XoZs9kSFwsotGIaKTQL2xOFsp9bPJOyUUOcipV9oN45FYpst4LTwEe3f84jhyKTMVulcUvNi-kRRam2/s320-rw/GMS-Composite-Knitting-Ind.-Ltd.png" alt="GMS Logo" class="w-10 h-10 object-contain rounded-lg" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                            <img src="https://logic.gmsbd.com/platform/file_upload/company_details_1_5639_0.jpg" alt="GMS Logo" class="w-10 h-10 object-contain rounded-lg" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                             <svg class="w-6 h-6 text-gray-600 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="display: none;">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
                             </svg>
@@ -1328,7 +1328,7 @@
                     <div class="head">
                         <div style="display: flex; align-items: flex-start; gap: 12px;">
                             <div style="width: 60px; height: 60px; background: white; border-radius: 8px; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border: 1px solid #e5e7eb; flex-shrink: 0;">
-                                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjFoZoF_UQFDZ0WIcogBokuYyvqzzKr_TMibzKjBQyPDZSXK3kc5zPUyyIqJ4_WunT8HKXEtSIE8-g_GdKl50_bbERjV-TTMl_7B7CpQJ87E-tR3XoZs9kSFwsotGIaKTQL2xOFsp9bPJOyUUOcipV9oN45FYpst4LTwEe3f84jhyKTMVulcUvNi-kRRam2/s320-rw/GMS-Composite-Knitting-Ind.-Ltd.png" alt="GMS Logo" style="width: 50px; height: 50px; object-fit: contain; border-radius: 6px;" onerror="this.style.display='none';">
+                                <img src="https://logic.gmsbd.com/platform/file_upload/company_details_1_5639_0.jpg" alt="GMS Logo" style="width: 50px; height: 50px; object-fit: contain; border-radius: 6px;" onerror="this.style.display='none';">
                             </div>
                             <div>
                                 <div class="logo">GMS Composite Knitting Ind Ltd</div>
@@ -1886,7 +1886,7 @@
             });
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'98998eb8a7b8daef',t:'MTc1OTYzMjA2MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'989a25a01283daef',t:'MTc1OTYzODI0Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
     
   </body>
